add new file Self_Study

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    <script src="JS/script.js"></script>
+    <!-- <script src="JS/script.js"></script> -->
+    <script src="JS/task_1.self_stady.js"></script>
 </body>
 </html>
